@@ -26,6 +26,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 5.0<br/>
+        [BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges <br/>
         [BEAM-1457] Display a spectral band's wavelengths next to its name<br/>
         <p>Changes in 4.10.1<br/>
         [BEAM-1404] Image views shall draw pixel grid at high zoom levels<br/>
