@@ -47,6 +47,8 @@ Improvements
 
 Bugs
 
+[BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges
+[BEAM-1568] Numbers are displayed with too little #places after the comma
 [BEAM-1514] ProductUtils.getScanLineTime fails for products with height 1
 [BEAM-1564] Binning operator causes NPE with invalid graph XML
 
